# pdf-inspector

./: Cargo.toml  README.md
src/: detector.rs  extractor.rs  glyph_names.rs  lib.rs  text_utils.rs  tounicode.rs  types.rs
src/extractor/: content_stream.rs  fonts.rs  layout.rs  mod.rs  xobjects.rs
src/markdown/: mod.rs  preprocess.rs
src/tables/: detect_heuristic.rs  detect_rects.rs  mod.rs
tests/: integration_tests.rs
tests/snapshots/: 2013-app2.md  p1244-1996.md  real-estate-pricing.md
